fix align

--- a/profile/profilePage_css.css
+++ b/profile/profilePage_css.css
@@ -1,3 +1,8 @@
+body {
+	width : 100%;
+	height : 100%;
+}
+
 h1 {
   font-size : 50px;
 }
@@ -16,7 +21,7 @@ h3 {
   background : #3E606F;
   position : relative;
   width : 100%;
-  height : 40%;
+  height : 300px;
   color : #eee;
 }
 
@@ -28,21 +33,20 @@ h3 {
 
 .profileImg{
 	background-color : #3E606F;
-	background-size : 100%;
 	background-repeat : no-repeat;
 	background-position : center;
 	background-image : url(./profile1.png);
-	position : absolute;
+	position : relative;
 	top : 0%;
-	left : 2%;
+	left : 20px;
 	height : 250px;
 	width : 250px;
 }
 
 .profileText {
 	position : absolute;
-	top : 10%;
-	left : 23%;
+	top : 0%;
+	left : 250px;
 }
 
 #backButton {
@@ -83,20 +87,20 @@ h3 {
 	position : relative;
 	text-align : center;
 	width : 100%;
-	height : 60%;
+	height : 450px;
 }
 
 .reviewImg {
 	margin-top : 10px;
 	background-color : #eee;
 	letter-spacing: 2px;
-	height : 90%;
+	height : 450px;
 	max-height: 90%;
     overflow-y: auto;
 	position : absolute;
-	left : 0%;
+	left : 1%;
 	top : 0%;
-	width : 50%;
+	width : 46%;
 }
 
 .review {
@@ -113,12 +117,11 @@ h3 {
 	font-weight : bold;
 	border: 1px solid;
 	padding : 20px;
-	width : 45%;
-	height : 83%;
-	max-height: 83%;
+	width : 46%;
+	height : 420px;
     overflow-y: auto;
 	position : absolute;
-	right : 0%;
+	right : 1%;
 	top : 0%;
 	margin-top : 10px;
 }
